Bug 510748 - still get assertions "reflow state computed incorrect width" and "non-root frame's desired size changed during an incremental reflow"; Don't report any padding or border on both axes if scrollbars are hidden; r=dbaron